Hackathon | Backend | Quizzes module - ResolveQuiz command
