# backend/src/modules/quizzes/presentation/rest-api/request/PostQuizSolutionRequestBody.ts
@@ -1,7 +1,9 @@
 export class PostQuizSolutionRequestBody {
+  readonly solutionAuthorId: string | undefined;
   readonly solution: { answerId: string; userId: string }[];
 
-  constructor(solution: { answerId: string; userId: string }[]) {
+  constructor(solutionAuthorId: string | undefined, solution: { answerId: string; userId: string }[]) {
+    this.solutionAuthorId = solutionAuthorId;
     this.solution = solution;
   }
 }
